# ucx_multirail

./: CMakeLists.txt  README.md  Readme.md  run_basic_recv.sh  run_basic_send.sh  run_bench_recv.sh  run_bench_send.sh  run_survey_recv.sh  run_survey_send.sh
apps/: ucx_mr_basic_recv.c  ucx_mr_basic_send.c  ucx_mr_bench_recv.c  ucx_mr_bench_send.c
include/: ucx_mr_aux.h  ucx_mr_cleanup.h  ucx_mr_comm.h  ucx_mr_setup.h  ucx_mr_sock_comm.h  ucx_mr_sock_rte.h  ucx_mr_types.h  ucx_mr_wait.h  ucx_multirail.h
include/mr_benchmark/: ucx_mr_bench.h  ucx_mr_bench_comm.h  ucx_mr_bench_memory.h  ucx_mr_bench_setup.h  ucx_mr_bench_types.h
include/mr_comm/: ucx_mr_comm_aux.h  ucx_mr_comm_dual.h  ucx_mr_comm_quad.h  ucx_mr_comm_single.h  ucx_mr_comm_test.h
